--- a/style.css
+++ b/style.css
@@ -1,7 +1,28 @@
-.square{
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 
+.square{
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
+    border: 1px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.square:hover {
+    background-color: #ac5353;
 }
 
 .board-row{
-    
+    display: flex;
 }
